# CityTrafficSimulator

./: .gitignore  .sconsign.dblite  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeTests.txt  CTestTestfile.cmake  CityTrafficSimulator  CityTrafficSimulator.sln  CityTrafficSimulator.vcxproj  CityTrafficSimulator.vcxproj.filters  CityTrafficSimulator_include-b12d07c.cmake  CityTrafficSimulator_tests-b12d07c.cmake  DartConfiguration.tcl  Makefile  Map1.txt  Map2.txt  Map3.txt  README.md  SConstruct  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmakeRun.txt  cmakeTest.txt  cmake_install.cmake  dokumentacja_wstepna.pages
Cmak/: CMakeCache.txt
Code/: AssetManager.cpp  AssetManager.h  Button.cpp  Button.h  ButtonsCreatorObserver.h  Camera.cpp  Camera.h  CamerasObserver.h  CamerasSubject.cpp  CamerasSubject.h  CamerasView.cpp  CamerasView.h  Cell.cpp  Cell.h  CreatorHandler.cpp  CreatorHandler.h  CreatorObserver.h  CreatorState.cpp  CreatorState.h  CreatorSubject.cpp  CreatorSubject.h  Definitions.h  FileFinder.cpp  FileFinder.h  FileHandler.cpp  FileHandler.h  Grid.cpp  Grid.h  InitCreateState.cpp  InitCreateState.h  InputManager.cpp  InputManager.h  KeysEnum.h  LoadDemo.cpp  LoadDemo.h  LoadState.cpp  LoadState.h  Main.cpp  MainMenuState.cpp  MainMenuState.h  (+110 more)
Code/Components/: button.cpp  camera.hpp  grid.hpp
Code/Helpers/: adding_elements_map_view_helper.hpp  cameras_map_view_helper.hpp  converter.cpp  converter.hpp  deleting_elements_helper.cpp  (+10 more)
Resources/: temp.rtf
SavedMaps/: Demo.txt  Map1.txt
Szkielet/: CMakeLists.txt  Readme.txt
(+99 files in other folders)
